# axum_static_macro

./: .Cargo.toml.swp  Cargo.toml  README.md
src/: content_types.rs  lib.rs
