[package]
name = "axum_static_macro"
version = "1.1.3"
edition = "2021"
description = "A macro to serve static files from the binary in Axum, and a list of content types for them"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/axum_static_macro"
keywords = ["axum", "macro", "static_files"]
categories = ["web-programming"]


[dev-dependencies]
axum = "0.4"
tokio = "1"
