[package]
name = "axum_static_macro"
version = "1.2.1"
edition = "2021"
description = "A macro to serve static files from the binary in Axum, and a list of content types for them"
license = "MIT OR Apache-2.0"
repository = "https://github.com/randomairborne/axum_static_macro"
keywords = ["axum", "macro", "static_files"]
categories = ["web-programming"]

[dependencies]

[dev-dependencies]
axum = "0.5"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs"] }
